tests/sumo/spec/flow/errors/neg_period/errors.sumo
Error: Invalid repetition rate in the definition of flow 'f1'.
Quitting (on error).
